@@ -1,3 +1,8 @@
+2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* ChangeLogService.cs, CommitDialogExtensionWidget.cs: Track LoggingService
+	  API changes.
+
 2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* ChangeLogService.cs: Fix ChangeLog location problem in
